--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>To do List</title>
 </head>
 <body>
     <div>
         <header>
-            <h1>Today's Tasks</h1>
+            <h2>Today's Tasks</h2>
         </header>
         <hr>
         <div class = "header">
